manifests/07-capabilities/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPDropCapabilities
metadata:
  name: eliminar-capacidades-linux
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    excludedNamespaces: ["kube-system", "gatekeeper-system"]
