manifests/07-capabilities/template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8spspdropcapabilities
spec:
  crd:
    spec:
      names:
        kind: K8sPSPDropCapabilities
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8spspdropcapabilities
        
        violation[{"msg": msg}] {
          c := input.review.object.spec.containers[_]
          not drops_all(c)
          msg := sprintf("Violacion ISO 27001: El contenedor %v debe eliminar todas las capabilities (drop: ['ALL'])", [c.name])
        }
        
        drops_all(c) {
          capability := c.securityContext.capabilities.drop[_]
          capability == "ALL"
        }
